[package]
name = "arcticrpc"
version = "0.1.0"
authors = ["joshbosley <bosley117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcticrpc"
path = "src/lib.rs"

[dependencies]
simple_logger = "1.3.0"
log = { version = "^0.4.8", features = ["std"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.41"
lazy_static = "1.4.0"
bincode = "1.2.0"
threadpool = "1.7.1"
rand = "0.7.2"