[package]
name = "jewel-db"
version = "0.1.0"
authors = ["joshbosley <bosley117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.41"
file-lock = "1.1.20"
rand = "0.7.2"