[package]
name = "rna"
version = "0.1.0"
authors = ["joshbosley <bosley117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
rand = "0.7.2"
serde = { version = "1.0.100", features = ["derive"] }
bincode = "1.2.0"