[package]
name = "darkcarbon"
version = "0.1.0"
authors = ["joshbosley <bosley117@gmail.com>"]
edition = "2018"

[dependencies]

log = { version = "^0.4.8", features = ["std"] }
simple_logger = "1.3.0"
serde = { version = "1.0.100", features = ["derive"] }
crossbeam = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.2"
serde_json = "1.0.41"
ctrlc = "3.1.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
nexus = { git = "https://github.com/darkcarbon/nexus", branch = "dc-dev" }