[package]
name = "nexus"
version = "0.1.0"
authors = ["joshbosley <bosley117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus-service"
path = "src/service.rs"

[dependencies]
rna = { git = "https://github.com/joshbosley/rna", branch = "version-0.0.0" }
log = { version = "^0.4.8", features = ["std"] }
simple_logger = "1.3.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
ctrlc = "3.1.3"
threadpool = "1.7.1"
crossbeam = "0.7.3"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.41"
rust-crypto = "0.2.36"
chrono = "0.4.9"
clap = "2.33.0"